--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 
     <nav>
-        <h2>Awlad.H</h2>
+        <h2>Shemanto </h2>
         <button><a href="" download="">Download Resume</a></button>
     </nav>
 
@@ -34,10 +34,84 @@
 
 </header>
 
-    <main></main>
+<main>
+
+    <section class="whyweb_container">
+        <div class="whyweb_content">
+            <div class="whyweb_writing_section">
+                <h2>Why Web Development??</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="whyweb_card_section">
+                <div class="card_1">
+                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p><button>Learn More</button></div>
+                    <div class="img"><img src="./assets/Layer_1.png" alt=""></div>
+                </div>
+                <div class="card_2">
+                    <div class="img"><img src="./assets/Group 3.png" alt=""></div>
+                    <div class="writings"><h2>I will help People by creating Modern Web System</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p><button>Learn More</button></div>
+                </div>
+                <div class="card_3">
+                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p><button>Learn More</button></div>
+                    <div class="img"><img src="./assets/Group 4.png" alt=""></div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="inspiration_container">
+        <div class="inspiration_content">
+            <div class="inspiration_writing_section"><h2>My Inspiration</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p></div>
+            <div class="inspiration_youtube_section"><iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=Unjgmb5ET3yWPwEq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+        </div>
+    </section>
+
+    <section class="target_container">
+        <div class="target_content">
+            <div class="target_writing_section">
+                <h2>My Current Target</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="target_card_section">
+                <div class="box_1"><img src="./assets/html.png" alt=""><h2>HTML</h2><p>Lorem Ipsum is simply dummy text of the printing.</p><a href="">Learn More</a></div>
+                <div class="box_2"><img src="./assets/css.png" alt=""><h2>CSS</h2><p>Lorem Ipsum is simply dummy text of the printing.</p><a href="">Learn More</a></div>
+                <div class="box_3"><img src="./assets/js.png" alt=""><h2>JavaScript</h2><p>Lorem Ipsum is simply dummy text of the printing.</p><a href="">Learn More</a></div>
+            </div>
+        </div>
+    </section>
+
+</main>
 
 
-    <footer></footer>
+<footer>
+    <section class="message">
+        <div class="message_container">
+            <h2>I need Support</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <form action="">
+                <input type="text" placeholder="Suggest me any feedback for me">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </section>
+
+
+    <section class="credit">
+        <div class="credit_container">
+            <div class="credit_text">An Open Commitment by Shemanto Sharkar</div>
+        
+        <div class="social_links">
+            <a href="https://www.facebook.com/bidutsharkarshemanto/"><img src="./assets/facebook.png" alt=""></a>
+            <a href="https://github.com/shemanto27"><img src="./assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/shemanto/"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+        </div>
+
+
+        </div>
+    </section>
+
+</footer>
 
 
 </body>
