--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav>
         <h2>Shemanto </h2>
-        <button><a href="" download="">Download Resume</a></button>
+        <button><a href="./assets/Profile.pdf" download>Download Resume</a></button>
     </nav>
 
     <div class="hero_container">
@@ -27,7 +27,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
             </div>
             <div class="hero_button_section">
-                <button>Contact with me</button>
+                <a href="#email-section"><button>Contact with me</button></a>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
 </main>
 
 
-<footer>
+<footer id="email-section">
     <section class="message">
         <div class="message_container">
             <h2>I need Support</h2>
