--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="hero_writing_section">
                 <h1>"In the near future, I hope to become a Developer."</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>Currently I am learning Web Development from Programming Hero.I am committed to finish my course on time and code 8 hours daily.</p>
             </div>
             <div class="hero_button_section">
                 <a href="#email-section"><button>Contact with me</button></a>
@@ -40,19 +40,19 @@
         <div class="whyweb_content">
             <div class="whyweb_writing_section">
                 <h2>Why Web Development??</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Web Development has huge demand and job opening locally and abroad.We also have guided program like Programming Hero.It is best field to start tech-career,specially non-CS background student like me.</p>
             </div>
             <div class="whyweb_card_section">
                 <div class="card_1">
-                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p><button>Learn More</button></div>
+                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
                     <div class="img"><img src="./assets/Layer_1.png" alt=""></div>
                 </div>
                 <div class="card_2">
                     <div class="img"><img src="./assets/Group 3.png" alt=""></div>
-                    <div class="writings"><h2>I will help People by creating Modern Web System</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p><button>Learn More</button></div>
+                    <div class="writings"><h2>I will help People by creating Modern Web System</h2><p></p>Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
                 </div>
                 <div class="card_3">
-                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p><button>Learn More</button></div>
+                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
                     <div class="img"><img src="./assets/Group 4.png" alt=""></div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 
     <section class="inspiration_container">
         <div class="inspiration_content">
-            <div class="inspiration_writing_section"><h2>My Inspiration</h2><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p></div>
+            <div class="inspiration_writing_section"><h2>My Inspiration</h2><p>My Inspiration is Jhonkar Mahbub Bhai.I have raed all his books.They work as a mentor for me.</p></div>
             <div class="inspiration_youtube_section"><iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=Unjgmb5ET3yWPwEq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </div>
     </section>
@@ -71,12 +71,12 @@
         <div class="target_content">
             <div class="target_writing_section">
                 <h2>My Current Target</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>My plan is to follow Programming Hero syllabus.Only plan is to "Don't Fall Behind the Race"</p>
             </div>
             <div class="target_card_section">
-                <div class="box_1"><img src="./assets/html.png" alt=""><h2>HTML</h2><p>Lorem Ipsum is simply dummy text of the printing.</p><a href="">Learn More</a></div>
-                <div class="box_2"><img src="./assets/css.png" alt=""><h2>CSS</h2><p>Lorem Ipsum is simply dummy text of the printing.</p><a href="">Learn More</a></div>
-                <div class="box_3"><img src="./assets/js.png" alt=""><h2>JavaScript</h2><p>Lorem Ipsum is simply dummy text of the printing.</p><a href="">Learn More</a></div>
+                <div class="box_1"><img src="./assets/html.png" alt=""><h2>HTML</h2><p>HTML creates the structure.</p><a href="https://www.w3schools.com/html/default.asp" target="_blank">Learn More</a></div>
+                <div class="box_2"><img src="./assets/css.png" alt=""><h2>CSS</h2><p>CSS creates beautiful designs and coloring.</p><a href="https://www.w3schools.com/css/default.asp" target="_blank">Learn More</a></div>
+                <div class="box_3"><img src="./assets/js.png" alt=""><h2>JavaScript</h2><p>JS creates advance functionalities</p><a href="https://www.w3schools.com/js/default.asp" target="_blank">Learn More</a></div>
             </div>
         </div>
     </section>
@@ -102,9 +102,9 @@
             <div class="credit_text">An Open Commitment by Shemanto Sharkar</div>
         
         <div class="social_links">
-            <a href="https://www.facebook.com/bidutsharkarshemanto/"><img src="./assets/facebook.png" alt=""></a>
-            <a href="https://github.com/shemanto27"><img src="./assets/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/shemanto/"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+            <a href="https://www.facebook.com/bidutsharkarshemanto/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+            <a href="https://github.com/shemanto27" target="_blank"><img src="./assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/shemanto/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
         </div>
 
 
