--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section class="whyweb_container">
         <div class="whyweb_content">
             <div class="whyweb_writing_section">
-                <h2>Why Web Development??</h2>
-                <p>Web Development has huge demand and job opening locally and abroad.We also have guided program like Programming Hero.It is best field to start tech-career,specially non-CS background student like me.</p>
+                <h2 class="section_headings">Why Web Development??</h2>
+                <p class="section_paragraph">Web Development has huge demand and job opening locally and abroad.We also have guided program like Programming Hero.It is best field to start tech-career,specially non-CS background student like me.</p>
             </div>
             <div class="whyweb_card_section">
                 <div class="card_1">
@@ -62,7 +62,7 @@
 
     <section class="inspiration_container">
         <div class="inspiration_content">
-            <div class="inspiration_writing_section"><h2>My Inspiration</h2><p>My Inspiration is Jhonkar Mahbub Bhai.I have raed all his books.They work as a mentor for me.</p></div>
+            <div class="inspiration_writing_section"><h2 class="section_headings">My Inspiration</h2><p class="section_paragraph">My Inspiration is Jhonkar Mahbub Bhai.I have raed all his books.They work as a mentor for me.</p></div>
             <div class="inspiration_youtube_section"><iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=Unjgmb5ET3yWPwEq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
         </div>
     </section>
@@ -70,8 +70,8 @@
     <section class="target_container">
         <div class="target_content">
             <div class="target_writing_section">
-                <h2>My Current Target</h2>
-                <p>My plan is to follow Programming Hero syllabus.Only plan is to "Don't Fall Behind the Race"</p>
+                <h2 class="section_headings">My Current Target</h2>
+                <p class="section_paragraph">My plan is to follow Programming Hero syllabus.Only plan is to "Don't Fall Behind the Race"</p>
             </div>
             <div class="target_card_section">
                 <div class="box_1"><img src="./assets/html.png" alt=""><h2>HTML</h2><p>HTML creates the structure.</p><a href="https://www.w3schools.com/html/default.asp" target="_blank">Learn More</a></div>
