--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             </div>
             <div class="whyweb_card_section">
                 <div class="card_1">
-                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
+                    <div class="writings"><h2 class="card_heading">I will Do Coding and Change The World</h2><p class="card_paragraph">Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
                     <div class="img"><img src="./assets/Layer_1.png" alt=""></div>
                 </div>
                 <div class="card_2">
                     <div class="img"><img src="./assets/Group 3.png" alt=""></div>
-                    <div class="writings"><h2>I will help People by creating Modern Web System</h2><p></p>Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
+                    <div class="writings"><h2 class="card_heading">I will help People by creating Modern Web System</h2><p class="card_paragraph">Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
                 </div>
                 <div class="card_3">
-                    <div class="writings"><h2>I will Do Coding and Change The World</h2><p>Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
+                    <div class="writings"><h2 class="card_heading">I will Do Coding and Change The World</h2><p class="card_paragraph">Read my blogs on Programming Hero Journey.</p><button><a href="https://dev.to/shemanto_sharkar" target="_blank">Learn More</a></button></div>
                     <div class="img"><img src="./assets/Group 4.png" alt=""></div>
                 </div>
             </div>
@@ -74,9 +74,9 @@
                 <p class="section_paragraph">My plan is to follow Programming Hero syllabus.Only plan is to "Don't Fall Behind the Race"</p>
             </div>
             <div class="target_card_section">
-                <div class="box_1"><img src="./assets/html.png" alt=""><h2>HTML</h2><p>HTML creates the structure.</p><a href="https://www.w3schools.com/html/default.asp" target="_blank">Learn More</a></div>
-                <div class="box_2"><img src="./assets/css.png" alt=""><h2>CSS</h2><p>CSS creates beautiful designs and coloring.</p><a href="https://www.w3schools.com/css/default.asp" target="_blank">Learn More</a></div>
-                <div class="box_3"><img src="./assets/js.png" alt=""><h2>JavaScript</h2><p>JS creates advance functionalities</p><a href="https://www.w3schools.com/js/default.asp" target="_blank">Learn More</a></div>
+                <div class="box_1"><img src="./assets/html.png" alt=""><h2 class="target_heading">HTML</h2><p class="target_paragraph">HTML creates the structure.</p><a href="https://www.w3schools.com/html/default.asp" target="_blank" class="target_link">Learn More</a></div>
+                <div class="box_2"><img src="./assets/css.png" alt=""><h2 class="target_heading">CSS</h2><p class="target_paragraph">CSS creates beautiful designs and coloring.</p><a href="https://www.w3schools.com/css/default.asp" target="_blank" class="target_link">Learn More</a></div>
+                <div class="box_3"><img src="./assets/js.png" alt=""><h2 class="target_heading">JavaScript</h2><p class="target_paragraph">JS creates advance functionalities</p><a href="https://www.w3schools.com/js/default.asp" target="_blank" class="target_link">Learn More</a></div>
             </div>
         </div>
     </section>
