--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section class="message">
         <div class="message_container">
             <h2>I need Support</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Need any Help? Just knock me</p>
             <form action="">
                 <input type="text" placeholder="Suggest me any feedback for me">
                 <input type="submit" value="Submit">
